# morphogen-rs

./: Cargo.toml  Trunk.toml  index.html  interactive_diffusion.py  matplotlib_experimentation.py  requirements.txt  spy_ma_optimizer.py  yfi-qkstrt.py
.cargo/: config.toml
docs/: index.html  reaction-diffusion-rs-412605159881b46a.js  reaction-diffusion-rs-412605159881b46a_bg.wasm
src/: main.rs
